Fix for publishing empty sidam ids